Restrict tunnel type and add HTTP smoke test